--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "globals": "^15.14.0",
     "postcss": "^8.5.2",
     "tailwindcss": "^4.0.6",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "vite-plugin-env-compatible": "^2.0.1"
   }
 }
