--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "tailwindcss": "^4.0.6",
     "typescript": "^5.7.3",
     "vite": "^6.1.0",
+    "vite-imagetools": "^7.0.5",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-env-compatible": "^2.0.1"
   }
 }
